<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".UserFile">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_user_file"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="645dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toTopOf="@+id/button_kaydet_fragment_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/user_file_menu" />
    <EditText
        android:id="@+id/editText_klasor_adi"
        android:layout_width="237dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:hint="@string/klasor_yeni_ad"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_user_file"
        tools:visibility="invisible" />
    <Button
        android:id="@+id/button_duzenle_user_file"
        android:layout_width="107dp"
        android:layout_height="46dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/button_background"
        android:text="@string/kaydet"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/editText_klasor_adi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editText_klasor_adi"
        app:layout_constraintVertical_bias="0.0"
        tools:visibility="invisible" />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_pictures"
        android:layout_width="match_parent"
        android:layout_height="457dp"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="17dp"
        app:layout_constraintBottom_toTopOf="@+id/editText_aciklama"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_klasor_adi" />
    <EditText
        android:id="@+id/editText_aciklama"
        android:layout_width="374dp"
        android:layout_height="88dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:hint="@string/aciklama_giriniz"
        android:inputType="textPersonName"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/imageView_camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.407"
        app:layout_constraintStart_toStartOf="parent" />
    <Button
        android:id="@+id/button_kaydet_fragment_user"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="29dp"
        android:text="@string/kaydet"
        android:background="@drawable/button_background"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView_camera"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_user_file" />
    <ImageView
        android:id="@+id/imageView_camera"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:layout_marginEnd="41dp"
        android:src="@drawable/add_photo_camera"
        app:layout_constraintBottom_toBottomOf="@+id/button_kaydet_fragment_user"
        app:layout_constraintEnd_toStartOf="@+id/imageView_file"
        app:layout_constraintStart_toEndOf="@+id/button_kaydet_fragment_user"
        app:layout_constraintTop_toTopOf="@+id/button_kaydet_fragment_user" />

    <ImageView
        android:id="@+id/imageView_file"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/add_photo_documentation"
        app:layout_constraintBottom_toBottomOf="@+id/imageView_camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView_camera"
        app:layout_constraintTop_toTopOf="@+id/imageView_camera" />

</androidx.constraintlayout.widget.ConstraintLayout>